parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABRE_COLCHETES
    ASPAS
    ATRIB_DIVIDE_IGUAL
    ATRIB_MAIS_IGUAL
    ATRIB_MENOS_IGUAL
    ATRIB_NEGACAO
    ATRIB_VEZES_IGUAL
    CHAR
    DOIS_PONTOS
    DOUBLE
    ENQUANTO
    FECHA_COLCHETES
    FINAL_LINHA
    IGNORE
    OP_DIF_IGUAL
    OP_RELACIONAL
    PARA
    PONTO_VIRGULA
    TESTE
    numero_mf
    string_mf
    variavel_mf

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> IFSULDEMINAS COMPILADORES INICIO comandos FIM
Rule 4     comandos -> comando
Rule 5     comandos -> comando comandos
Rule 6     comandos -> COMENTARIO VARIAVEL
Rule 7     comando -> MOSTRAAI ABRE_PARENTESES possibilidades_mostraai FECHA_PARENTESES
Rule 8     comando -> VARIAVEL ATRIB_IGUAL FALAI ABRE_PARENTESES FECHA_PARENTESES
Rule 9     possibilidades_mostraai -> STRING
Rule 10    possibilidades_mostraai -> INTEIRO
Rule 11    possibilidades_mostraai -> VARIAVEL
Rule 12    possibilidades_mostraai -> STRING possibilidades_mostraai
Rule 13    possibilidades_mostraai -> INTEIRO possibilidades_mostraai
Rule 14    possibilidades_mostraai -> VARIAVEL possibilidades_mostraai
Rule 15    comando -> declara_varias_variaveis
Rule 16    declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi
Rule 17    declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi VIRGULA declara_varias_variaveis
Rule 18    op_matematica -> OP_MAIS
Rule 19    op_matematica -> OP_MENOS
Rule 20    op_matematica -> OP_VEZES
Rule 21    op_matematica -> OP_DIVIDE
Rule 22    op_matematica -> OP_MODULO
Rule 23    mat_multi -> possibilidade_if_comparacao
Rule 24    mat_multi -> possibilidade_if_comparacao op_matematica mat_multi
Rule 25    comando -> SE ABRE_PARENTESES comparacao FECHA_PARENTESES ABRE_CHAVES comandos FECHA_CHAVES
Rule 26    comando -> SE ABRE_PARENTESES comparacao FECHA_PARENTESES ABRE_CHAVES comandos FECHA_CHAVES SENAO ABRE_CHAVES comandos FECHA_CHAVES
Rule 27    comando -> FAZAI chamada_funcao ABRE_CHAVES comandos FECHA_CHAVES
Rule 28    comando -> FAZAI PONTO VARIAVEL
Rule 29    chamada_funcao -> VARIAVEL ABRE_PARENTESES FECHA_PARENTESES
Rule 30    chamada_funcao -> VARIAVEL ABRE_PARENTESES possibilidade_if_comparacao FECHA_PARENTESES
Rule 31    chamada_funcao -> VARIAVEL ABRE_PARENTESES possibilidade_if_comparacao VIRGULA possibilidade_if_comparacao FECHA_PARENTESES
Rule 32    comparacao -> possibilidade_if_comparacao op_relacional possibilidade_if_comparacao
Rule 33    comparacao -> possibilidade_if_comparacao op_relacional possibilidade_if_comparacao op_logico comparacao
Rule 34    op_logico -> REL_E
Rule 35    op_logico -> REL_OU
Rule 36    op_relacional -> REL_MENOR
Rule 37    op_relacional -> REL_MAIOR
Rule 38    op_relacional -> REL_MENOR_IGUAL
Rule 39    op_relacional -> REL_MAIOR_IGUAL
Rule 40    op_relacional -> REL_DUPLO_IGUAL
Rule 41    op_relacional -> REL_DIFERENTE
Rule 42    possibilidade_if_comparacao -> VARIAVEL
Rule 43    possibilidade_if_comparacao -> INTEIRO
Rule 44    possibilidade_if_comparacao -> STRING
Rule 45    possibilidade_if_comparacao -> VERDADEIRO
Rule 46    possibilidade_if_comparacao -> FALSO

Terminals, with rules where they appear

ABRE_CHAVES          : 25 26 26 27
ABRE_COLCHETES       : 
ABRE_PARENTESES      : 7 8 25 26 29 30 31
ASPAS                : 
ATRIB_DIVIDE_IGUAL   : 
ATRIB_IGUAL          : 8 16 17
ATRIB_MAIS_IGUAL     : 
ATRIB_MENOS_IGUAL    : 
ATRIB_NEGACAO        : 
ATRIB_VEZES_IGUAL    : 
CHAR                 : 
COMENTARIO           : 6
COMPILADORES         : 3
DOIS_PONTOS          : 
DOUBLE               : 
ENQUANTO             : 
FALAI                : 8
FALSO                : 46
FAZAI                : 27 28
FECHA_CHAVES         : 25 26 26 27
FECHA_COLCHETES      : 
FECHA_PARENTESES     : 7 8 25 26 29 30 31
FIM                  : 3
FINAL_LINHA          : 
IFSULDEMINAS         : 3
IGNORE               : 
INICIO               : 3
INTEIRO              : 10 13 43
MOSTRAAI             : 7
OP_DIF_IGUAL         : 
OP_DIVIDE            : 21
OP_MAIS              : 18
OP_MENOS             : 19
OP_MODULO            : 22
OP_RELACIONAL        : 
OP_VEZES             : 20
PARA                 : 
PONTO                : 28
PONTO_VIRGULA        : 
REL_DIFERENTE        : 41
REL_DUPLO_IGUAL      : 40
REL_E                : 34
REL_MAIOR            : 37
REL_MAIOR_IGUAL      : 39
REL_MENOR            : 36
REL_MENOR_IGUAL      : 38
REL_OU               : 35
SE                   : 25 26
SENAO                : 26
STRING               : 9 12 44
TESTE                : 
VARIAVEL             : 6 8 11 14 16 17 28 29 30 31 42
VERDADEIRO           : 45
VIRGULA              : 17 31
error                : 
numero_mf            : 
string_mf            : 
variavel_mf          : 

Nonterminals, with rules where they appear

chamada_funcao       : 27
comando              : 4 5
comandos             : 3 5 25 26 26 27
comparacao           : 25 26 33
declara_varias_variaveis : 15 17
mat_multi            : 16 17 24
op_logico            : 33
op_matematica        : 24
op_relacional        : 32 33
possibilidade_if_comparacao : 23 24 30 31 31 32 32 33 33
possibilidades_mostraai : 7 12 13 14
statement            : 1 2
statements           : 1 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . IFSULDEMINAS COMPILADORES INICIO comandos FIM

    IFSULDEMINAS    shift and go to state 3

    statements                     shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . IFSULDEMINAS COMPILADORES INICIO comandos FIM

    IFSULDEMINAS    shift and go to state 3

    statement                      shift and go to state 4

state 2

    (2) statements -> statement .

    IFSULDEMINAS    reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)


state 3

    (3) statement -> IFSULDEMINAS . COMPILADORES INICIO comandos FIM

    COMPILADORES    shift and go to state 5


state 4

    (1) statements -> statements statement .

    IFSULDEMINAS    reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)


state 5

    (3) statement -> IFSULDEMINAS COMPILADORES . INICIO comandos FIM

    INICIO          shift and go to state 6


state 6

    (3) statement -> IFSULDEMINAS COMPILADORES INICIO . comandos FIM
    (4) comandos -> . comando
    (5) comandos -> . comando comandos
    (6) comandos -> . COMENTARIO VARIAVEL
    (7) comando -> . MOSTRAAI ABRE_PARENTESES possibilidades_mostraai FECHA_PARENTESES
    (8) comando -> . VARIAVEL ATRIB_IGUAL FALAI ABRE_PARENTESES FECHA_PARENTESES
    (15) comando -> . declara_varias_variaveis
    (25) comando -> . SE ABRE_PARENTESES comparacao FECHA_PARENTESES ABRE_CHAVES comandos FECHA_CHAVES
    (26) comando -> . SE ABRE_PARENTESES comparacao FECHA_PARENTESES ABRE_CHAVES comandos FECHA_CHAVES SENAO ABRE_CHAVES comandos FECHA_CHAVES
    (27) comando -> . FAZAI chamada_funcao ABRE_CHAVES comandos FECHA_CHAVES
    (28) comando -> . FAZAI PONTO VARIAVEL
    (16) declara_varias_variaveis -> . VARIAVEL ATRIB_IGUAL mat_multi
    (17) declara_varias_variaveis -> . VARIAVEL ATRIB_IGUAL mat_multi VIRGULA declara_varias_variaveis

    COMENTARIO      shift and go to state 9
    MOSTRAAI        shift and go to state 11
    VARIAVEL        shift and go to state 10
    SE              shift and go to state 13
    FAZAI           shift and go to state 14

    comandos                       shift and go to state 7
    comando                        shift and go to state 8
    declara_varias_variaveis       shift and go to state 12

state 7

    (3) statement -> IFSULDEMINAS COMPILADORES INICIO comandos . FIM

    FIM             shift and go to state 15


state 8

    (4) comandos -> comando .
    (5) comandos -> comando . comandos
    (4) comandos -> . comando
    (5) comandos -> . comando comandos
    (6) comandos -> . COMENTARIO VARIAVEL
    (7) comando -> . MOSTRAAI ABRE_PARENTESES possibilidades_mostraai FECHA_PARENTESES
    (8) comando -> . VARIAVEL ATRIB_IGUAL FALAI ABRE_PARENTESES FECHA_PARENTESES
    (15) comando -> . declara_varias_variaveis
    (25) comando -> . SE ABRE_PARENTESES comparacao FECHA_PARENTESES ABRE_CHAVES comandos FECHA_CHAVES
    (26) comando -> . SE ABRE_PARENTESES comparacao FECHA_PARENTESES ABRE_CHAVES comandos FECHA_CHAVES SENAO ABRE_CHAVES comandos FECHA_CHAVES
    (27) comando -> . FAZAI chamada_funcao ABRE_CHAVES comandos FECHA_CHAVES
    (28) comando -> . FAZAI PONTO VARIAVEL
    (16) declara_varias_variaveis -> . VARIAVEL ATRIB_IGUAL mat_multi
    (17) declara_varias_variaveis -> . VARIAVEL ATRIB_IGUAL mat_multi VIRGULA declara_varias_variaveis

    FIM             reduce using rule 4 (comandos -> comando .)
    FECHA_CHAVES    reduce using rule 4 (comandos -> comando .)
    COMENTARIO      shift and go to state 9
    MOSTRAAI        shift and go to state 11
    VARIAVEL        shift and go to state 10
    SE              shift and go to state 13
    FAZAI           shift and go to state 14

    comando                        shift and go to state 8
    comandos                       shift and go to state 16
    declara_varias_variaveis       shift and go to state 12

state 9

    (6) comandos -> COMENTARIO . VARIAVEL

    VARIAVEL        shift and go to state 17


state 10

    (8) comando -> VARIAVEL . ATRIB_IGUAL FALAI ABRE_PARENTESES FECHA_PARENTESES
    (16) declara_varias_variaveis -> VARIAVEL . ATRIB_IGUAL mat_multi
    (17) declara_varias_variaveis -> VARIAVEL . ATRIB_IGUAL mat_multi VIRGULA declara_varias_variaveis

    ATRIB_IGUAL     shift and go to state 18


state 11

    (7) comando -> MOSTRAAI . ABRE_PARENTESES possibilidades_mostraai FECHA_PARENTESES

    ABRE_PARENTESES shift and go to state 19


state 12

    (15) comando -> declara_varias_variaveis .

    COMENTARIO      reduce using rule 15 (comando -> declara_varias_variaveis .)
    MOSTRAAI        reduce using rule 15 (comando -> declara_varias_variaveis .)
    VARIAVEL        reduce using rule 15 (comando -> declara_varias_variaveis .)
    SE              reduce using rule 15 (comando -> declara_varias_variaveis .)
    FAZAI           reduce using rule 15 (comando -> declara_varias_variaveis .)
    FIM             reduce using rule 15 (comando -> declara_varias_variaveis .)
    FECHA_CHAVES    reduce using rule 15 (comando -> declara_varias_variaveis .)


state 13

    (25) comando -> SE . ABRE_PARENTESES comparacao FECHA_PARENTESES ABRE_CHAVES comandos FECHA_CHAVES
    (26) comando -> SE . ABRE_PARENTESES comparacao FECHA_PARENTESES ABRE_CHAVES comandos FECHA_CHAVES SENAO ABRE_CHAVES comandos FECHA_CHAVES

    ABRE_PARENTESES shift and go to state 20


state 14

    (27) comando -> FAZAI . chamada_funcao ABRE_CHAVES comandos FECHA_CHAVES
    (28) comando -> FAZAI . PONTO VARIAVEL
    (29) chamada_funcao -> . VARIAVEL ABRE_PARENTESES FECHA_PARENTESES
    (30) chamada_funcao -> . VARIAVEL ABRE_PARENTESES possibilidade_if_comparacao FECHA_PARENTESES
    (31) chamada_funcao -> . VARIAVEL ABRE_PARENTESES possibilidade_if_comparacao VIRGULA possibilidade_if_comparacao FECHA_PARENTESES

    PONTO           shift and go to state 22
    VARIAVEL        shift and go to state 23

    chamada_funcao                 shift and go to state 21

state 15

    (3) statement -> IFSULDEMINAS COMPILADORES INICIO comandos FIM .

    IFSULDEMINAS    reduce using rule 3 (statement -> IFSULDEMINAS COMPILADORES INICIO comandos FIM .)
    $end            reduce using rule 3 (statement -> IFSULDEMINAS COMPILADORES INICIO comandos FIM .)


state 16

    (5) comandos -> comando comandos .

    FIM             reduce using rule 5 (comandos -> comando comandos .)
    FECHA_CHAVES    reduce using rule 5 (comandos -> comando comandos .)


state 17

    (6) comandos -> COMENTARIO VARIAVEL .

    FIM             reduce using rule 6 (comandos -> COMENTARIO VARIAVEL .)
    FECHA_CHAVES    reduce using rule 6 (comandos -> COMENTARIO VARIAVEL .)


state 18

    (8) comando -> VARIAVEL ATRIB_IGUAL . FALAI ABRE_PARENTESES FECHA_PARENTESES
    (16) declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL . mat_multi
    (17) declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL . mat_multi VIRGULA declara_varias_variaveis
    (23) mat_multi -> . possibilidade_if_comparacao
    (24) mat_multi -> . possibilidade_if_comparacao op_matematica mat_multi
    (42) possibilidade_if_comparacao -> . VARIAVEL
    (43) possibilidade_if_comparacao -> . INTEIRO
    (44) possibilidade_if_comparacao -> . STRING
    (45) possibilidade_if_comparacao -> . VERDADEIRO
    (46) possibilidade_if_comparacao -> . FALSO

    FALAI           shift and go to state 25
    VARIAVEL        shift and go to state 24
    INTEIRO         shift and go to state 28
    STRING          shift and go to state 29
    VERDADEIRO      shift and go to state 30
    FALSO           shift and go to state 31

    mat_multi                      shift and go to state 26
    possibilidade_if_comparacao    shift and go to state 27

state 19

    (7) comando -> MOSTRAAI ABRE_PARENTESES . possibilidades_mostraai FECHA_PARENTESES
    (9) possibilidades_mostraai -> . STRING
    (10) possibilidades_mostraai -> . INTEIRO
    (11) possibilidades_mostraai -> . VARIAVEL
    (12) possibilidades_mostraai -> . STRING possibilidades_mostraai
    (13) possibilidades_mostraai -> . INTEIRO possibilidades_mostraai
    (14) possibilidades_mostraai -> . VARIAVEL possibilidades_mostraai

    STRING          shift and go to state 33
    INTEIRO         shift and go to state 34
    VARIAVEL        shift and go to state 35

    possibilidades_mostraai        shift and go to state 32

state 20

    (25) comando -> SE ABRE_PARENTESES . comparacao FECHA_PARENTESES ABRE_CHAVES comandos FECHA_CHAVES
    (26) comando -> SE ABRE_PARENTESES . comparacao FECHA_PARENTESES ABRE_CHAVES comandos FECHA_CHAVES SENAO ABRE_CHAVES comandos FECHA_CHAVES
    (32) comparacao -> . possibilidade_if_comparacao op_relacional possibilidade_if_comparacao
    (33) comparacao -> . possibilidade_if_comparacao op_relacional possibilidade_if_comparacao op_logico comparacao
    (42) possibilidade_if_comparacao -> . VARIAVEL
    (43) possibilidade_if_comparacao -> . INTEIRO
    (44) possibilidade_if_comparacao -> . STRING
    (45) possibilidade_if_comparacao -> . VERDADEIRO
    (46) possibilidade_if_comparacao -> . FALSO

    VARIAVEL        shift and go to state 24
    INTEIRO         shift and go to state 28
    STRING          shift and go to state 29
    VERDADEIRO      shift and go to state 30
    FALSO           shift and go to state 31

    comparacao                     shift and go to state 36
    possibilidade_if_comparacao    shift and go to state 37

state 21

    (27) comando -> FAZAI chamada_funcao . ABRE_CHAVES comandos FECHA_CHAVES

    ABRE_CHAVES     shift and go to state 38


state 22

    (28) comando -> FAZAI PONTO . VARIAVEL

    VARIAVEL        shift and go to state 39


state 23

    (29) chamada_funcao -> VARIAVEL . ABRE_PARENTESES FECHA_PARENTESES
    (30) chamada_funcao -> VARIAVEL . ABRE_PARENTESES possibilidade_if_comparacao FECHA_PARENTESES
    (31) chamada_funcao -> VARIAVEL . ABRE_PARENTESES possibilidade_if_comparacao VIRGULA possibilidade_if_comparacao FECHA_PARENTESES

    ABRE_PARENTESES shift and go to state 40


state 24

    (42) possibilidade_if_comparacao -> VARIAVEL .

    OP_MAIS         reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    OP_MENOS        reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    OP_VEZES        reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    OP_DIVIDE       reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    OP_MODULO       reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    VIRGULA         reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    COMENTARIO      reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    MOSTRAAI        reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    VARIAVEL        reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    SE              reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    FAZAI           reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    FIM             reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    FECHA_CHAVES    reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    REL_MENOR       reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    REL_MAIOR       reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    REL_MENOR_IGUAL reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    REL_MAIOR_IGUAL reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    REL_DUPLO_IGUAL reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    REL_DIFERENTE   reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    FECHA_PARENTESES reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    REL_E           reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)
    REL_OU          reduce using rule 42 (possibilidade_if_comparacao -> VARIAVEL .)


state 25

    (8) comando -> VARIAVEL ATRIB_IGUAL FALAI . ABRE_PARENTESES FECHA_PARENTESES

    ABRE_PARENTESES shift and go to state 41


state 26

    (16) declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi .
    (17) declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi . VIRGULA declara_varias_variaveis

    COMENTARIO      reduce using rule 16 (declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi .)
    MOSTRAAI        reduce using rule 16 (declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi .)
    VARIAVEL        reduce using rule 16 (declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi .)
    SE              reduce using rule 16 (declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi .)
    FAZAI           reduce using rule 16 (declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi .)
    FIM             reduce using rule 16 (declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi .)
    FECHA_CHAVES    reduce using rule 16 (declara_varias_variaveis -> VARIAVEL ATRIB_IGUAL mat_multi .)
    VIRGULA         shift and go to state 42


state 27

    (23) mat_multi -> possibilidade_if_comparacao .
    (24) mat_multi -> possibilidade_if_comparacao . op_matematica mat_multi
    (18) op_matematica -> . OP_MAIS
    (19) op_matematica -> . OP_MENOS
    (20) op_matematica -> . OP_VEZES
    (21) op_matematica -> . OP_DIVIDE
    (22) op_matematica -> . OP_MODULO

    VIRGULA         reduce using rule 23 (mat_multi -> possibilidade_if_comparacao .)
    COMENTARIO      reduce using rule 23 (mat_multi -> possibilidade_if_comparacao .)
    MOSTRAAI        reduce using rule 23 (mat_multi -> possibilidade_if_comparacao .)
    VARIAVEL        reduce using rule 23 (mat_multi -> possibilidade_if_comparacao .)
    SE              reduce using rule 23 (mat_multi -> possibilidade_if_comparacao .)
    FAZAI           reduce using rule 23 (mat_multi -> possibilidade_if_comparacao .)
    FIM             reduce using rule 23 (mat_multi -> possibilidade_if_comparacao .)
    FECHA_CHAVES    reduce using rule 23 (mat_multi -> possibilidade_if_comparacao .)
    OP_MAIS         shift and go to state 44
    OP_MENOS        shift and go to state 45
    OP_VEZES        shift and go to state 46
    OP_DIVIDE       shift and go to state 47
    OP_MODULO       shift and go to state 48

    op_matematica                  shift and go to state 43

state 28

    (43) possibilidade_if_comparacao -> INTEIRO .

    OP_MAIS         reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    OP_MENOS        reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    OP_VEZES        reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    OP_DIVIDE       reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    OP_MODULO       reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    VIRGULA         reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    COMENTARIO      reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    MOSTRAAI        reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    VARIAVEL        reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    SE              reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    FAZAI           reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    FIM             reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    FECHA_CHAVES    reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    REL_MENOR       reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    REL_MAIOR       reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    REL_MENOR_IGUAL reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    REL_MAIOR_IGUAL reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    REL_DUPLO_IGUAL reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    REL_DIFERENTE   reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    FECHA_PARENTESES reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    REL_E           reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)
    REL_OU          reduce using rule 43 (possibilidade_if_comparacao -> INTEIRO .)


state 29

    (44) possibilidade_if_comparacao -> STRING .

    OP_MAIS         reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    OP_MENOS        reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    OP_VEZES        reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    OP_DIVIDE       reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    OP_MODULO       reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    VIRGULA         reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    COMENTARIO      reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    MOSTRAAI        reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    VARIAVEL        reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    SE              reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    FAZAI           reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    FIM             reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    FECHA_CHAVES    reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    REL_MENOR       reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    REL_MAIOR       reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    REL_MENOR_IGUAL reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    REL_MAIOR_IGUAL reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    REL_DUPLO_IGUAL reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    REL_DIFERENTE   reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    FECHA_PARENTESES reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    REL_E           reduce using rule 44 (possibilidade_if_comparacao -> STRING .)
    REL_OU          reduce using rule 44 (possibilidade_if_comparacao -> STRING .)


state 30

    (45) possibilidade_if_comparacao -> VERDADEIRO .

    OP_MAIS         reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    OP_MENOS        reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    OP_VEZES        reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    OP_DIVIDE       reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    OP_MODULO       reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    VIRGULA         reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    COMENTARIO      reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    MOSTRAAI        reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    VARIAVEL        reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    SE              reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    FAZAI           reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    FIM             reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    FECHA_CHAVES    reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    REL_MENOR       reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    REL_MAIOR       reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    REL_MENOR_IGUAL reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    REL_MAIOR_IGUAL reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    REL_DUPLO_IGUAL reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    REL_DIFERENTE   reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    FECHA_PARENTESES reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    REL_E           reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)
    REL_OU          reduce using rule 45 (possibilidade_if_comparacao -> VERDADEIRO .)


state 31

    (46) possibilidade_if_comparacao -> FALSO .

    OP_MAIS         reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    OP_MENOS        reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    OP_VEZES        reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    OP_DIVIDE       reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    OP_MODULO       reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    VIRGULA         reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    COMENTARIO      reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    MOSTRAAI        reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    VARIAVEL        reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    SE              reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    FAZAI           reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    FIM             reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    FECHA_CHAVES    reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    REL_MENOR       reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    REL_MAIOR       reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    REL_MENOR_IGUAL reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    REL_MAIOR_IGUAL reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    REL_DUPLO_IGUAL reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    REL_DIFERENTE   reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    FECHA_PARENTESES reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    REL_E           reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)
    REL_OU          reduce using rule 46 (possibilidade_if_comparacao -> FALSO .)


state 32

    (7) comando -> MOSTRAAI ABRE_PARENTESES possibilidades_mostraai . FECHA_PARENTESES

    FECHA_PARENTESES shift and go to state 49


state 33

    (9) possibilidades_mostraai -> STRING .
    (12) possibilidades_mostraai -> STRING . possibilidades_mostraai
    (9) possibilidades_mostraai -> . STRING
    (10) possibilidades_mostraai -> . INTEIRO
    (11) possibilidades_mostraai -> . VARIAVEL
    (12) possibilidades_mostraai -> . STRING possibilidades_mostraai
    (13) possibilidades_mostraai -> . INTEIRO possibilidades_mostraai
    (14) possibilidades_mostraai -> . VARIAVEL possibilidades_mostraai

    FECHA_PARENTESES reduce using rule 9 (possibilidades_mostraai -> STRING .)
    STRING          shift and go to state 33
    INTEIRO         shift and go to state 34
    VARIAVEL        shift and go to state 35

    possibilidades_mostraai        shift and go to state 50

state 34

    (10) possibilidades_mostraai -> INTEIRO .
    (13) possibilidades_mostraai -> INTEIRO . possibilidades_mostraai
    (9) possibilidades_mostraai -> . STRING
    (10) possibilidades_mostraai -> . INTEIRO
    (11) possibilidades_mostraai -> . VARIAVEL
    (12) possibilidades_mostraai -> . STRING possibilidades_mostraai
    (13) possibilidades_mostraai -> . INTEIRO possibilidades_mostraai
    (14) possibilidades_mostraai -> . VARIAVEL possibilidades_mostraai

    FECHA_PARENTESES reduce using rule 10 (possibilidades_mostraai -> INTEIRO .)
    STRING          shift and go to state 33
    INTEIRO         shift and go to state 34
    VARIAVEL        shift and go to state 35

    possibilidades_mostraai        shift and go to state 51

state 35
